mobile alignment issue fix

--- a/src/components/chats/chats.scss
+++ b/src/components/chats/chats.scss
@@ -58,6 +58,7 @@
     width: 370px;
     height: 200px;
     margin-top: 5px;
+    border-radius: 5px;
     input {
       width: 90% !important;
     }
