--- a/src/components/controls/controls.scss
+++ b/src/components/controls/controls.scss
@@ -18,7 +18,6 @@
   .selected-color {
     width: 40px;
     height: 40px;
-    // border-radius: 50%;
   }
 
   .box {
@@ -69,10 +68,12 @@
 
   @media only screen and (max-width: 800px) {
     flex-wrap: wrap;
-    width: 333px;
+    width: 315px;
+    padding: 0;
     box-sizing: border-box;
+    margin-top: 5px;
     & > * {
-      margin-right: 5px;
+      margin-right: 0;
     }
     > div {
       margin-bottom: 5px;
