--- a/src/components/options/options.scss
+++ b/src/components/options/options.scss
@@ -69,7 +69,6 @@
     width: 315px;
     height: 230px;
     border-radius: 5px;
-    left: 0;
     .info {
       font-size: 20px;
     }
